# Barnes_Hut_Algorithm

./: .clang-format  .gitignore  Barnes_Hut_Algorithm.sln  CMakeLists.txt  LICENSE  README.md  Raport20210511-2244.diagsession
Barnes_Hut_Algorithm/: Barnes_Hut_Algorithm.vcxproj  Barnes_Hut_Algorithm.vcxproj.filters  Camera.cpp  Camera.h  Entity.cpp  Entity.h  Graphics.h  Map.cpp  Map.h  MyRandom.cpp  MyRandom.h  Node.cpp  Node.h  OmniMath.cpp  OmniMath.h  Simulation.cpp  Simulation.h  Tracker.cpp  Tracker.h  Utils.cpp  Utils.h  cpp.hint  main.cpp
Barnes_Hut_Algorithm/Debug/: Barnes_Hut_Algorithm.exe.recipe  vc142.idb
Barnes_Hut_Algorithm/Debug/Barnes_H.ca7a63aa.tlog/: Barnes_Hut_Algorithm.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Barnes_Hut_Algorithm/Release/: Barnes_Hut_Algorithm.exe.recipe
Barnes_Hut_Algorithm/Release/Barnes_H.ca7a63aa.tlog/: Barnes_Hut_Algorithm.lastbuildstate  Barnes_Hut_Algorithm.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: Barnes_Hut_Algorithm.exe.orig
Release/: Barnes_Hut_Algorithm.iobj  Barnes_Hut_Algorithm.ipdb
Source/: Camera.cpp  Camera.h  Simulation.cpp  Simulation.h  Tracker.cpp  Tracker.h  main.cpp
Source/Application/: Application.cpp  Application.h  Camera.cpp  Camera.h
Source/Entity/: CircEntity.cpp  CircEntity.h  Entity.cpp  Entity.h
Source/QuadTree/: Node.cpp  Node.h  QuadTree.cpp  QuadTree.h
Source/Simulation/: Simulation.cpp  Simulation.h
Source/Simulation/Entity/: CircEntity.cpp  CircEntity.h  Entity.cpp  Entity.h  Tracker.cpp  Tracker.h
Source/Simulation/Preset/: SimulationPreset.h  SimulationPresetEditor.cpp  SimulationPresetEditor.h  SimulationPresetGenerator.cpp  SimulationPresetGenerator.h  SimulationPresetManager.cpp  SimulationPresetManager.h  SimulationPresetSerializer.cpp  SimulationPresetSerializer.h  SimulationPresetUtils.cpp  SimulationPresetUtils.h
Source/Simulation/QuadTree/: Node.cpp  Node.h  QuadTree.cpp  QuadTree.h
Source/SimulationPreset/: SimulationPreset.h  SimulationPresetSerializer.cpp  SimulationPresetSerializer.h
Source/Utils/: Utils.cpp  Utils.h
data/simulation_presets/: Default.json  FiveBody.json  ThreeBody.json  TwoBody.json  default.json
